--- a/docx4j-ImportXHTML.NET/packages.config
+++ b/docx4j-ImportXHTML.NET/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="2.1.2" targetFramework="net35" />
-  <package id="DocumentFormat.OpenXml" version="1.0" targetFramework="net35" />
-  <package id="docx4j.NET" version="3.0.1.0" targetFramework="net35" />
-  <package id="IKVM" version="7.3.4830.0" targetFramework="net35" />
-  <package id="slf4j-api" version="1.7.5" targetFramework="net35" />
-  <package id="slf4j-NetCommonLogging" version="1.0.0" targetFramework="net35" />
+  <package id="Common.Logging" version="3.3.1" targetFramework="net35" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net35" />
+  <package id="docx4j.NET" version="6.0.1.2" targetFramework="net35" />
+  <package id="IKVM" version="8.1.5717.0" targetFramework="net35" />
+  <package id="slf4j-api" version="1.7.5.4" targetFramework="net35" />
+  <!--<package id="slf4j-NetCommonLogging" version="1.7.5.4" targetFramework="net35" />-->
+  <!--<package id="TaskParallelLibrary" version="1.0.2856.0" targetFramework="net35" />-->
 </packages>
